<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTextViewEngin"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/textViewEngin"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:background="#E6E5E5"
            android:textAlignment="textEnd"
            android:textColor="#101010"
            android:textSize="36sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEngin"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/btnMr"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_mr"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnMc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_mc"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/Mplus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_mpl"
            android:textColor="#FDFCFC"
            android:textSize="38sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/Mminus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_m_min"
            android:textColor="#FDFCFC"
            android:textSize="38sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEngin2"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/btnCos"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_cos"
            android:textAllCaps="false"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnSin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_sin"
            android:textAllCaps="false"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/lx"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_l_x"
            android:textAllCaps="false"
            android:textColor="#FDFCFC"
            android:textSize="38sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/sqrt"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#B4FF8922"
            android:text="@string/btn_text_sqrt"
            android:textAllCaps="false"
            android:textColor="#FDFCFC"
            android:textSize="38sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutbtnClearEngin"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnClearEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_clear"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:showIn="@layout/activity_main"></Button>

        <Button
            android:id="@+id/btnPlusMinusEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_plus_minus"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnDivEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_div"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnPercentEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:text="@string/btn_text_percent"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutbtnSevenEngin"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnSevenEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_7"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnEithEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_8"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnNineEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_9"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnMultEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:text="@string/btn_text_x"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutbtnFourEngin"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnFourEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_4"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnFiveEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_5"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnSixEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_6"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnPlusEngin"
            android:layout_width="30dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:text="@string/btn_text_plus"
            android:textColor="#FDFCFC"
            android:textSize="38sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutbtnOneEngin"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnOneEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_1"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnTwoEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_2"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnThreeEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_3"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnMinusEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:text="@string/btn_text_minus"
            android:textColor="#FDFCFC"
            android:textSize="40sp"
            android:textStyle="bold"></Button>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutbtnNullEngin"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnNullEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:background="#989898"
            android:text="@string/btn_text_0"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnPointEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_point"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnEqualEngin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:text="@string/btn_text_equally"
            android:textColor="#FDFCFC"
            android:textSize="38sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

</LinearLayout>
